<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/mole_header"/>

        <ImageView
            android:id="@+id/capturedImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/scanmole"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <Button
                android:id="@+id/choosePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.4"
                android:text="@string/button_choose"
                android:backgroundTint="@color/black"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/Run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:backgroundTint="@color/red"
                android:text="@string/button_run"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/textHeader"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="invisible"
            android:text="@string/result_header"/>


        <TextView
            android:id="@+id/resultText"
            android:text="@string/mlkit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:lineSpacingExtra="3dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/infoText"
            android:text="@string/info_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:lineSpacingExtra="3dp"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>